bugfix: swagger admin endpoints description
